@@ -4,8 +4,8 @@ import com.dynamic.thread.core.enums.NotifyPlatformEnum;
 import com.dynamic.thread.core.model.ThreadPoolState;
 import lombok.extern.slf4j.Slf4j;
 
-import jakarta.mail.*;
-import jakarta.mail.internet.*;
+import javax.mail.*;
+import javax.mail.internet.*;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.HashMap;
@@ -55,7 +55,7 @@ public class EmailNotifyPlatform implements NotifyPlatform {
         config.put("toAddresses", toAddresses);
         config.put("ssl", String.valueOf(ssl));
         config.put("username", username);
-        config.put("hasPassword", password != null && !password.isBlank() ? "true" : "false");
+        config.put("hasPassword", password != null && !password.trim().isEmpty() ? "true" : "false");
         return config;
     }
 
@@ -77,11 +77,11 @@ public class EmailNotifyPlatform implements NotifyPlatform {
      * Send an email with the given subject and HTML body.
      */
     private boolean sendEmail(String subject, String htmlBody) {
-        if (smtpHost == null || smtpHost.isBlank()) {
+        if (smtpHost == null || smtpHost.trim().isEmpty()) {
             log.warn("[Email] SMTP host is not configured");
             return false;
         }
-        if (toAddresses == null || toAddresses.isBlank()) {
+        if (toAddresses == null || toAddresses.trim().isEmpty()) {
             log.warn("[Email] No recipient addresses configured");
             return false;
         }
@@ -128,60 +128,49 @@ public class EmailNotifyPlatform implements NotifyPlatform {
      * Build HTML content for alarm notification.
      */
     private String buildAlarmHtml(ThreadPoolState state, String message) {
-        return """
-            <div style="font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto;">
-              <h2 style="color: #e74c3c; border-bottom: 2px solid #e74c3c; padding-bottom: 8px;">
-                Dynamic Thread Pool Alarm
-              </h2>
-              <table style="width: 100%%; border-collapse: collapse; margin: 16px 0;">
-                <tr>
-                  <td style="padding: 8px; font-weight: bold; color: #555;">Thread Pool</td>
-                  <td style="padding: 8px; color: #e74c3c; font-weight: bold;">%s</td>
-                </tr>
-                <tr style="background: #f9f9f9;">
-                  <td style="padding: 8px; font-weight: bold; color: #555;">Alarm Message</td>
-                  <td style="padding: 8px;">%s</td>
-                </tr>
-              </table>
-              <h3 style="color: #333; margin-top: 20px;">Thread Pool State</h3>
-              <table style="width: 100%%; border-collapse: collapse; border: 1px solid #ddd;">
-                <tr style="background: #f5f5f5;">
-                  <th style="padding: 8px; text-align: left; border: 1px solid #ddd;">Metric</th>
-                  <th style="padding: 8px; text-align: left; border: 1px solid #ddd;">Value</th>
-                </tr>
-                <tr><td style="padding: 8px; border: 1px solid #ddd;">Core Pool Size</td>
-                    <td style="padding: 8px; border: 1px solid #ddd;">%d</td></tr>
-                <tr style="background: #f9f9f9;">
-                    <td style="padding: 8px; border: 1px solid #ddd;">Max Pool Size</td>
-                    <td style="padding: 8px; border: 1px solid #ddd;">%d</td></tr>
-                <tr><td style="padding: 8px; border: 1px solid #ddd;">Active Count</td>
-                    <td style="padding: 8px; border: 1px solid #ddd;">%d</td></tr>
-                <tr style="background: #f9f9f9;">
-                    <td style="padding: 8px; border: 1px solid #ddd;">Queue Size</td>
-                    <td style="padding: 8px; border: 1px solid #ddd;">%d / %d</td></tr>
-                <tr><td style="padding: 8px; border: 1px solid #ddd;">Queue Usage</td>
-                    <td style="padding: 8px; border: 1px solid #ddd; color: #e74c3c; font-weight: bold;">%.1f%%</td></tr>
-                <tr style="background: #f9f9f9;">
-                    <td style="padding: 8px; border: 1px solid #ddd;">Thread Usage</td>
-                    <td style="padding: 8px; border: 1px solid #ddd; color: #e74c3c; font-weight: bold;">%.1f%%</td></tr>
-                <tr><td style="padding: 8px; border: 1px solid #ddd;">Rejected Count</td>
-                    <td style="padding: 8px; border: 1px solid #ddd;">%d</td></tr>
-              </table>
-              <p style="color: #999; font-size: 12px; margin-top: 16px;">
-                Alarm Time: %s
-              </p>
-            </div>
-            """.formatted(
-                state.getThreadPoolId(),
-                message,
-                state.getCorePoolSize(),
-                state.getMaximumPoolSize(),
-                state.getActiveCount(),
-                state.getQueueSize(), state.getQueueCapacity(),
-                state.getQueueUsagePercent(),
-                state.getActivePercent(),
-                state.getRejectedCount(),
-                state.getTimestamp().format(FORMATTER)
+        return String.format(
+            "<div style=\"font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto;\">"
+            + "<h2 style=\"color: #e74c3c; border-bottom: 2px solid #e74c3c; padding-bottom: 8px;\">"
+            + "Dynamic Thread Pool Alarm</h2>"
+            + "<table style=\"width: 100%%; border-collapse: collapse; margin: 16px 0;\">"
+            + "<tr><td style=\"padding: 8px; font-weight: bold; color: #555;\">Thread Pool</td>"
+            + "<td style=\"padding: 8px; color: #e74c3c; font-weight: bold;\">%s</td></tr>"
+            + "<tr style=\"background: #f9f9f9;\">"
+            + "<td style=\"padding: 8px; font-weight: bold; color: #555;\">Alarm Message</td>"
+            + "<td style=\"padding: 8px;\">%s</td></tr></table>"
+            + "<h3 style=\"color: #333; margin-top: 20px;\">Thread Pool State</h3>"
+            + "<table style=\"width: 100%%; border-collapse: collapse; border: 1px solid #ddd;\">"
+            + "<tr style=\"background: #f5f5f5;\">"
+            + "<th style=\"padding: 8px; text-align: left; border: 1px solid #ddd;\">Metric</th>"
+            + "<th style=\"padding: 8px; text-align: left; border: 1px solid #ddd;\">Value</th></tr>"
+            + "<tr><td style=\"padding: 8px; border: 1px solid #ddd;\">Core Pool Size</td>"
+            + "<td style=\"padding: 8px; border: 1px solid #ddd;\">%d</td></tr>"
+            + "<tr style=\"background: #f9f9f9;\">"
+            + "<td style=\"padding: 8px; border: 1px solid #ddd;\">Max Pool Size</td>"
+            + "<td style=\"padding: 8px; border: 1px solid #ddd;\">%d</td></tr>"
+            + "<tr><td style=\"padding: 8px; border: 1px solid #ddd;\">Active Count</td>"
+            + "<td style=\"padding: 8px; border: 1px solid #ddd;\">%d</td></tr>"
+            + "<tr style=\"background: #f9f9f9;\">"
+            + "<td style=\"padding: 8px; border: 1px solid #ddd;\">Queue Size</td>"
+            + "<td style=\"padding: 8px; border: 1px solid #ddd;\">%d / %d</td></tr>"
+            + "<tr><td style=\"padding: 8px; border: 1px solid #ddd;\">Queue Usage</td>"
+            + "<td style=\"padding: 8px; border: 1px solid #ddd; color: #e74c3c; font-weight: bold;\">%.1f%%</td></tr>"
+            + "<tr style=\"background: #f9f9f9;\">"
+            + "<td style=\"padding: 8px; border: 1px solid #ddd;\">Thread Usage</td>"
+            + "<td style=\"padding: 8px; border: 1px solid #ddd; color: #e74c3c; font-weight: bold;\">%.1f%%</td></tr>"
+            + "<tr><td style=\"padding: 8px; border: 1px solid #ddd;\">Rejected Count</td>"
+            + "<td style=\"padding: 8px; border: 1px solid #ddd;\">%d</td></tr></table>"
+            + "<p style=\"color: #999; font-size: 12px; margin-top: 16px;\">Alarm Time: %s</p></div>",
+            state.getThreadPoolId(),
+            message,
+            state.getCorePoolSize(),
+            state.getMaximumPoolSize(),
+            state.getActiveCount(),
+            state.getQueueSize(), state.getQueueCapacity(),
+            state.getQueueUsagePercent(),
+            state.getActivePercent(),
+            state.getRejectedCount(),
+            state.getTimestamp().format(FORMATTER)
         );
     }
 
@@ -189,25 +178,20 @@ public class EmailNotifyPlatform implements NotifyPlatform {
      * Build HTML content for config change notification.
      */
     private String buildConfigChangeHtml(String threadPoolId, String oldConfig, String newConfig) {
-        return """
-            <div style="font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto;">
-              <h2 style="color: #3498db; border-bottom: 2px solid #3498db; padding-bottom: 8px;">
-                Thread Pool Config Changed
-              </h2>
-              <p><strong>Thread Pool:</strong> <span style="color: #3498db;">%s</span></p>
-              <h3 style="color: #555;">Before</h3>
-              <pre style="background: #f5f5f5; padding: 12px; border-radius: 4px; overflow-x: auto;">%s</pre>
-              <h3 style="color: #555;">After</h3>
-              <pre style="background: #f0fff0; padding: 12px; border-radius: 4px; overflow-x: auto;">%s</pre>
-              <p style="color: #999; font-size: 12px; margin-top: 16px;">
-                Change Time: %s
-              </p>
-            </div>
-            """.formatted(
-                threadPoolId,
-                oldConfig,
-                newConfig,
-                LocalDateTime.now().format(FORMATTER)
+        return String.format(
+            "<div style=\"font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto;\">"
+            + "<h2 style=\"color: #3498db; border-bottom: 2px solid #3498db; padding-bottom: 8px;\">"
+            + "Thread Pool Config Changed</h2>"
+            + "<p><strong>Thread Pool:</strong> <span style=\"color: #3498db;\">%s</span></p>"
+            + "<h3 style=\"color: #555;\">Before</h3>"
+            + "<pre style=\"background: #f5f5f5; padding: 12px; border-radius: 4px; overflow-x: auto;\">%s</pre>"
+            + "<h3 style=\"color: #555;\">After</h3>"
+            + "<pre style=\"background: #f0fff0; padding: 12px; border-radius: 4px; overflow-x: auto;\">%s</pre>"
+            + "<p style=\"color: #999; font-size: 12px; margin-top: 16px;\">Change Time: %s</p></div>",
+            threadPoolId,
+            oldConfig,
+            newConfig,
+            LocalDateTime.now().format(FORMATTER)
         );
     }
 }
